@startuml
'https://plantuml.com/class-diagram


package "Bases des objets" <<Frame>> {

    class Page {
        -title : String
        -author : String
        toHTML() : String
    }

    abstract class Tag {
        - text : String
        getText() : String
        setText(text : String) : void
        toHTML() : String
    }

    Tag <|-- Paragraph
    Tag <|-- Title
    Tag <|-- Link
    Tag <|-- Image

    Page -> "*" Tag : content
    Site -> "*" Page : pages

    class Site {
        -title : String
        -pages : Map<String, Page>
        add(Page p)
        remove(Page p)
        render(String name)
    }

    Image : toHTML(): String
    Link : toHTML(): String
    Title : toHTML(): String
    Paragraph : toHTML(): String

}


package "Strategy - calculer cout hebergement" <<frame>> {
    class PriceCalculator {
        setStrategy(Strategy)
        setSite(Site)
        calculatePrice(Site) : double
    }
    note right of PriceCalculator::setSite
      This method is useless if
      calculatePrice takes a site as param
      which is quiet the correct signature
    end note

    interface Strategy {
        calculate(Site) : double
    }

    class OVH {
        calculate(Site) : double
    }

    class Amazon {
            calculate(Site) : double
        }
    PriceCalculator -> Strategy
    Strategy <|.. OVH
    Strategy <|.. Amazon

    PriceCalculator --> Site

}
@enduml